--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,15 +1,14 @@
 
-%% CONCLUSION =
-%% * overall analysis and integration of the research and conclusions of the thesis in
-%%   light of current research in the field
-%% * conclusions regarding goals or hypotheses of the thesis that were presented in
-%%   the Introduction, and the overall significance and contribution of the thesis
-%%   research
-%% * comments on strengths and limitations of the thesis research
-%% * discussion of any potential applications of the research findings
-%% * an analysis of possible future research directions in the field drawing on the work
-%%   of the thesis
-%     --> 
+%% what should Conclusion contain:
+% [ ] overall analysis and integration of the research and conclusions of the thesis in
+%     light of current research in the field
+% [ ] conclusions regarding goals or hypotheses of the thesis that were presented in
+%     the Introduction, and the overall significance and contribution of the thesis
+%     research
+% [ ] comments on strengths and limitations of the thesis research
+% [ ] discussion of any potential applications of the research findings
+% [ ] an analysis of possible future research directions in the field drawing on the work
+%     of the thesis
 
 
 % 1  emphasize the importance of spatial-dispersive electrodynamics
@@ -42,10 +41,11 @@
 %	  2) the Pendry's and Maslovski's models for f_p
 %	  3) the composite spectra of statistical sample of microspheres
 %  * express author's opinions on: 
-%		1) viability of the "information velocity"   
+%		1) viability of the notion of "information velocity"   
 %		2) local media application and the importance of spatial dispersion on some structures
 %		3) questioning the supposed novelty and practical impact of MMs
 %		4) that probably no dielectric-only metamaterial can be built for permittivity contrast below 50
+%       5) origin of antiresonance observed in effective $\eeff(f)$ or $\meff(f)$, and its persistence in random structures
 
 %+ achievements <------- todo add
 	%+ When one can use N,
