--- a/result.tex
+++ b/result.tex
@@ -170,7 +170,6 @@ In the second series of simulations plotted in Fig.  \ref{fg_omegap_a}b, we kept
 %\cite{silveirinha2007metamaterial}
 %\cite{belov2003strong}
 %\cite{belov2002dispersion}
-%\cite{lindell2001bw}
 %\cite{silveirinha2005homogenization}
 % nice refs  from 1950-1970: http://ece-research.unm.edu/summa/notes/SSN/note192.pdf
 
@@ -338,6 +337,16 @@ We performed series of experiments to measure the effective permeability  $\mu_{
 \includegraphics[width=12cm]{img/Spheres_FDTD_experimentalConv.pdf}
 \end{figure}
 }
+\paragraph{Antiresonances and problems with local effective parameters}
+% todo refer to the loss scan here
+
+\begin{displayquote}
+\textit{antiresonance "may not" come from periodicity, as it is also observed in random structures}  (Ref. \cite{wallen2010})
+\end{displayquote}
+Anti-resonant curve  of resonant inclusions : ""; %% 
+% -- but this argument assumes that aperiodicity  will always prohibit antiresonance; in fact it may just broaden it in spectra
+Restoring the physical meaning of MM cosstitutive parameters %%  \cite{alu2010}
+
 %}}}
 %% TODO? E-mail: Add the x, y, z, size scans of the ellipsoids%{{{
 %> On 19 Mar 2014, at 15:57, <dominecf@fzu.cz>
