--- a/theory.tex
+++ b/theory.tex
@@ -587,7 +587,7 @@ The plots in the left column of Fig. \ref{fg_dcll} show the \textit{local} permi
 Its right column features a thin black contour connecting all points where the dispersion equation (\ref{eq_dispdetLL}) was found to hold by a numerical search.
 This is complemented by the Landau-Lifshitz permittivity $\epsLL(\omega, k)$ as a background colour map with blue tone for negative values and red for positive ones. 
 %As a confirmation of the compatibility of the Landau-Lifshitz model with the classical one,
-Additionally, the original green dispersion curve as in Fig. \ref{fg_dcsimpleel} is retained, as computed using the classical approach based on the Eq. (\ref{eq_dispeq_loc}). It can thus be seen that both models always predict exactly the same dispersion.
+Additionally, the original green dashed dispersion curve as in Fig. \ref{fg_dcsimpleel} is retained, as computed using the classical approach based on the Eq. (\ref{eq_dispeq_loc}). It can thus be seen that both models always predict exactly the same dispersion.
 
 For a local isotropic medium with a single electric resonance in Fig. \ref{fg_dcll}a, the plotted curves are identical to Fig. \ref{fg_dcsimpleel}. On the right panel, the Landau-Lifshitz permittivity $\epsLL(\omega, k)$ follows a resonance curve in frequency, but is independent of the wavenumber $k$ (as long as the medium is local). With increasing frequency, the lower polariton branch bends towards higher $k$, as $\epsLL(\omega, k)$ increases towards the resonance at $\omega_0$, then a band of frequency follows where and no solution of the wave equation %% TODO REF
 exists due to $\epsLL(\omega, k)$ being negative, and finally the upper polariton branch starts when $\epsLL(\omega, k)$ crosses zero and becomes positive again.
@@ -733,7 +733,7 @@ To conclude, the author is convinced that the notion of \textit{information velo
 \paragraph{Inhomogeneity}%{{{
 The previous sections discussed infinite media, with the only deviation from homogenity at an interface of two media, where refraction of the waves is observed, and it was shown that the resulting orientation of the wave vector and of the group velocity could be easily deduced on a geometrical basis. The amplitudes of the reflected and refracted waves can be also easily computed for local media, whereas their computation for nonlocal media is much less straightforward. 
 
-There is a broader class of structures for which analytical or semianalytical methods have been developed to compute their interactions with electromagnetic waves, such as scattering on dielectric/metallic spheres, propagation through arbitrary stacks of parallel layers, diffraction on thin apertures, resonances in orthogonal, cylindrical or spherical cavities, or wave guiding in high-symmetry waveguides or optical fibers. 
+There is a broader class of structures for which analytical or semianalytical methods have been developed to compute their interactions with electromagnetic waves, such as scattering on dielectric or metallic spheres and cylinders, propagation through arbitrary stacks of parallel layers, diffraction on thin apertures, resonances in orthogonal, cylindrical or spherical cavities, or wave guiding in high-symmetry waveguides or optical fibers. 
 
 The interactions of electromagnetic waves with most of possible structures are too complex to be expressed analytically, and can only be accessed by numerical methods, some of which are described in Chapter \ref{chapter_numerical}. However, when these elementary structures are arranged into an infinite array, any resulting periodic structure behaves in a way that is typical for the periodicity and its most important traits can again be partially understood on an analytical basis.
 This chapter focuses on these general properties shared by periodic structures, leaving the particular numerical simulations to the Results section.
@@ -742,7 +742,7 @@ This chapter focuses on these general properties shared by periodic structures, 
 \paragraph{Periodicity}%{{{
 Under the notion of \textit{periodicity} we understand the existence of discrete translational symmetries. In three dimensions, we can write
 \begin{equation} \epsrl(\omega, \rr) = \epsrl(\omega, \rr + m_1 \ava + m_2 \avb + m_3 \avc) \label{eq_trsym}\end{equation}
-where $m_1, m_2, m_3 \in \mathbb{Z}$ and $\ava, \avb, \avc$ are three linearly independent vectors. The local permittivity, given by Eq. (\ref{eq_lorentz_eps}), was intuitively generalized to a function of the position $\rr$. The same periodicity is also imposed on the permeability $\murl(\omega,\rr)$ etc. The constituent media are described by the \textit{local} quantities only, to avoid possible problems at the boundary computing the spatial convolution  in nonlocal media, Eq. (\ref{eq_eps_nonloc}). 
+where $m_1, m_2, m_3 \in \mathbb{Z}$ and $\ava, \avb, \avc$ are three linearly independent vectors. The local permittivity, given by Eq. (\ref{eq_lorentz_eps}), was intuitively generalized to a function of the position $\rr$. The constituent media are described by the \textit{local} quantities only, to avoid possible problems at the boundary computing the spatial convolution  in nonlocal media, Eq. (\ref{eq_eps_nonloc}).  The same periodicity is also imposed on the permeability $\murl(\omega,\rr)$ etc. 
 
 The points generated by all combinations of possible translations by $m_1 \ava + m_2 \avb + m_3 \avc$ form a periodic lattice.
 The volume defined as a \textit{set of points closest to} one given point of the lattice will be denoted as a \textit{unit cell} (similar to the \textit{Wigner-Seitz cell} in solid-state physics). Obviously, the permittivity or permeability in periodic structures needs only to be specified in the domain of one unit cell.
@@ -1151,28 +1151,27 @@ the term of \textit{left-handed media} and speculated to what extent they might 
 
 %}}}
 \paragraph{Terminology of media with unusual parameters}  %{{{
-In the literature, different terms are used for media  \todo{+}
+In the literature, different terms are used for a similar class of media. In most cases it appears \cite{lindell2001bw} that it is a result of disunited terminology rather than a need to distinguish fine nuances. For the sake of clarity, however, they can
 
-\textit{Negative-refraction} %% TODO accumulate literature
+\begin{enumerate}
+\item{The most general term is \textit{negative-refraction} media. %% TODO accumulate literature
+It can occur due a range of phenomena, for example,  under proper incidence angle, also in the anisotropic crystal of calcite.  } 
+\item{The aforementioned term is most probably supposed to mean \textit{negative-refractive-index}, or simply \textit{negative-index} media, which by definition behave as (approximately) isotropic at least in a limited range of angles, and therefore their index of refraction can be defined as is discussed in Sect. \ref{disp_rel_local_media}. 
+	
+Isotropy also implies the phase and group velocities are parallel or anti-parallel, which legitimates to call this group as \textit{backward-wave} \cite{lindell2001bw}.} 
 
---- are superset of ---
+\item{
+Yet narrower group is defined by the terms of \textit{left-handed} \cite{veselago1968} or \textit{doubly-negative} media. Their etymology is based on the spatial orientation of the vector triplet $(\E, \HH, \KK)$. In ordinary media with $\epsrl > 0$, $\murl > 0$, the pseudovector $\HH$ is chosen so that the triplet can be associated to the thumb, index and middle finger of the right hand. 
 
-\textit{negative-index}, \textit{backward-wave} \cite{lindell2001bw}
-%% TODO accumulate literature
+By simultaneous reversal the sign of both $\epsrl$ and $\murl$, the electric and magnetic induction change their sign to be antiparallel to the fields and the wavevector $\KK$ is reversed, associating the triplet with the left hand. 
 
-Media with a negative index of refraction are a subset of negative refraction, for which the notion of index of refraction makes sense, as discussed above.
-\add{When the index of refraction $N = \sqrt{\epsrl\murl}$ and the impedance $Z = \sqrt{\frac{\murl}{\epsrl}}$ are both defined, one may easily deduce that 
-\begin{equation} \epsrl = \pm\frac{N}{Z}, \quad \murl = \pm N\,Z. \label{eq_nzepsmu}\end{equation}
-The question of indefinite sign can be decided using the assumption of medium \textit{passivity}, that is, of the medium absorbing the wave rather than amplifying it. \todo{describe further}
-
---- are superset of ---
-
-\textit{left-handed} or \textit{doubly-negative}
-%% TODO accumulate literature
-\todo{add the comments from http://www.wave-scattering.com/negative.html}
+In the author's view, both terms can therefore be associated exclusively with a proper subset of the \textit{negative-index} media, namely to those where the local parameters of $\eeff$ and $\meff$ exist.
 }
+\end{enumerate}
+%% TODO accumulate literature
+
 %}}}
-\paragraph{Prediction of focusing by a negative-index slab} %{{{  ================== OK? (readpaper, +img)
+\paragraph{Prediction of focusing effects by a negative-index slab} %{{{  ================== OK? (readpaper, +img)
 As also discussed by Veselago \cite[p. 511]{veselago1968} and a decade later by Silin \cite{silin1978possibility},  %: Silin in 1978  %% TODO READPAPER, does not discuss amplification of evanescent waves?
 a plane-parallel slab with an isotropic negative index of refraction and sufficient thickness would refract waves emanated from a point source towards a new focus in its volume, and similar negative refraction forms a second focus behind the slab. It is thus often referred to as a \textit{negative-index lens}, although neither its focal point nor optical axis are defined as in classical lenses.
 
@@ -1363,7 +1362,7 @@ In the author's belief, it is necessary to adopt the full theory of spatial-disp
 %}}}
 
 \section{The boundary between photonic crystals and metamaterials} 
-In the light of the previous%{{{
+In the light of the previous %{{{
 historical review, it appears that MMs and PhCs are divided by historical reasons as different paradigms which have developed separately for most of the 20th century. It was however argued above that these paradigms and research comumnities are undergoing the process of unification, which incites the question whether there exist any objective rules to tell apart MMs from PhCs.
 %}}}
 \paragraph{The wavelength criterion} %{{{
