--- a/title.tex
+++ b/title.tex
@@ -37,9 +37,9 @@ Faculty of Nuclear Sciences and Physical Engineering\\
 \bgroup \def\arraystretch{1.5}
 \noindent\begin{tabular}{p{.25\linewidth}p{.7\linewidth}}
 Autor:					&\textbf{Ing. Filip Dominec} \\
-					~	&Czech Technical University in Prague\\
-					~	&Faculty of Nuclear Sciences and Physical Engineering\\ 
-					~	&Department of Physical Electronics\\
+					~	&České vysoké učení technické v Praze\\
+					~	&Fakulta jaderná a fyzikálně inženýrská\\ 
+					~	&Katedra fyzikální elektroniky\\
 Název práce:			&\textbf{Metamateriály pro terahertzovou spektrální oblast} \\
 Studijní program:		&\textbf{Aplikace přírodních věd} \\
 Studijní obor:			&\textbf{Fyzikální inženýrství} \\
@@ -95,9 +95,11 @@ Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, com
 \thispagestyle{empty} \newpage
 % --------------------------------------------------------------------------------
 \chapter*{Acknowledgements}
-Preparation of this thesis was not without difficulties. However, it appears that overcoming such difficulties is essential to gain some sort of valuable knowledge that can not be conveyed through textbooks, and of experience that can not be gained through straightforward, focused work. At the first place I wish to express thanks to my advisor, Dr. Filip Kadlec, and all colleagues who shared these difficulties, namely Dr. Christelle Kadlec, Dr. Ivan Richter, Dr. Petr Ku\v{z}el. The presented work could never be finished without the kind cooperation of many people from the Institute of Physics in Prague and from the Faculty of Nuclear Engineering and Physical sciences, Czech Technical University. 
+Preparation of this thesis was not without difficulties. However, it appears that overcoming such difficulties is essential to gain some sort of valuable knowledge that can not be conveyed through textbooks, and of experience that can not be gained through straightforward and focused work only.  At the first place I wish to express thanks to my advisor, Dr. Filip Kadlec, and all other people who helped this project to be finished, namely Dr. Christelle Kadlec and doc. Petr Ku\v{z}el  from the Institute of Physics, and doc. Ivan Richter from the Faculty of Nuclear Engineering and Physical sciences, Czech Technical University. 
 
-Almost surprisingly, all my scientific aspirations found a permanent and selfless support of my wife and all family members, who always had patience with my focusing on abstract problems instead of the more practical aims, and who had understanding my occasional stubborn attitude towards some of their good advices.
+Discussions with doc. Lukáš Jelínek and prof. Jan Macháč convinced me of the value in proper handling of the theoretical background, which later proved essential for explaining the results of the thesis. During my stay in France in 2013, a collaboration with Dr. Matthias Vanwolleghem not only greatly contributed to my experience with the numerical simulations, but was also very inspiring. 
+
+Almost surprisingly, all my scientific aspirations found a permanent and selfless support of my wife and all family members, who always had patience with my focusing on abstract problems instead of the more practical aims and with my stubborn attitude towards some of their good advices.
 
 The numerical results presented in the thesis could be hardly obtained without the hard work of hundreds of volunteers contributing to the open-source scientific software: Most of the plots were made using the Matplotlib library \cite{hunter2007}, FDTD computations were based on MEEP \cite{oskooi2010meep} and PWEM computations used the MBP programs \cite{johnson2001mpb}. 
 
