--- a/title.tex
+++ b/title.tex
@@ -87,6 +87,23 @@ Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, com
 %\chapter*{Abstract} 
 {\let\clearpage\relax\chapter*{Abstract}}
 \noindent
+Unusual phenomena such as negative refraction, photonic band gaps, or strong spatial dispersion are observed when electromagnetic waves interact with periodic structures. Such structures, known either as metamaterials or photonic crystals, can be designed to manipulate the wave in an advantageous way. One of proposed applications is in the terahertz range of frequencies where a demand remains for technological development.
+
+The theoretical treatment of these phenomena starts from the classical electrodynamics of media with classical dispersion, which is later generalized to spatially dispersive media and to the Bloch-Floquet theory of waves in periodic structures. The end of the theoretical part attempts to clarify the terms used in the literature, and to show that the concepts of metamaterials and photonic crystals are in fact older than is sometimes assumed.
+
+To complement the rigorous theory with intuitive understanding of the related phenomena, diverse examples of periodic structures are presented, whose behaviour in the terahertz range was numerically simulated by the finite-difference time-domain method. In some cases, the results of this simulation method were supported by other simulation algorithms and by the experimental measurement by the terahertz time-domain spectroscopy.
+
+
+
+
+With the aim 
+
+Electromagnetic 
+The thesis focuses on the behaviour of electromagnetic field in periodic structures. In its first part, it reviews the theory of electromagnetic waves in homogeneous media including those with spatial dispersion. The Bloch theorem enables to rigorously generalize the theory to periodic structures known as metamaterials and photonic crystals. 
+
+
+
+
 ~
 \todo{+} 
 
