abstract sketch + translation

--- a/title.tex
+++ b/title.tex
@@ -79,33 +79,32 @@ Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, com
 %\vspace{-5mm}
 
 %\begingroup \renewcommand{\newpage}{}
+\vspace{-20mm}
 \chapter*{Abstrakt}
 \noindent ~
-\todo{+ Z abstraktu musí být zřejmé, co je cílem předložené práce a jakých vědeckých výsledků doktorand osobně dosáhl.}
+% TODO přeložit
+Při setkání elektromagnetických vln s periodickými strukturami lze pozorovat neobvyklé jevy, jako je záporný index lomu, fotonický zakázaný pás nebo silná prostorová disperze. Tyto struktury mohou být navrženy tak, aby pracovaly s vlnou žádoucím způsobem, a označují se buďto jako metamateriály nebo jako fotonické krystaly. Část z jejich navrhovaných využití je pro terahertzovou techniku, kde můžou překlenout poměrně slabé výsledky klasických metod.  
 
-\vspace{10mm}
+Teoretický základ práce vychází z elektrodynamiky prostředí s klasickou disperzí, která je dále zobecněna na prostředí s prostorovou disperzí a na Blochovu-Floquetovu teorii vln v periodických strukturách. Závěr teoretické části se pokouší vyjasnit pojmy používané v literatuře a ukázat, že myšlenky metamateriálů i fotonických krystalů jsou ve skutečnosti starší, než se nezřídka uvažuje.
+
+Obecná teorie je doplněna příklady terahertzového chování různorodých periodických struktur, které bylo vypočteno metodou konečných diferencí v časové doméně. V některých případech byly její výsledky podloženy jinými simulačními algoritmy nebo měřeními pomocí terahertzové spektroskopie v časové doméně.
+
+Cílem pro srovnání rozličných struktur obsažené v této práci je srozumitelnou formou ukázat a okomentovat nejpodstatnější principy. Podobné srovnání zřejmě v dosavadní literatuře chybělo. Dalším cílem předložených výsledků je doložit schopnosti prostředí pro simulace, které autor vyvinul a uveřejnil na internetu s úmyslem motivovat další výzkum v této oblasti. 
+
+\vspace{0mm}
 %\chapter*{Abstract} 
 {\let\clearpage\relax\chapter*{Abstract}}
 \noindent
-Unusual phenomena such as negative refraction, photonic band gaps, or strong spatial dispersion are observed when electromagnetic waves interact with periodic structures. Such structures, known either as metamaterials or photonic crystals, can be designed to manipulate the wave in an advantageous way. One of proposed applications is in the terahertz range of frequencies where a demand remains for technological development.
+Unusual phenomena such as negative index of refraction, photonic band gaps, or strong spatial dispersion are observed when electromagnetic waves interact with periodic structures. These can be designed to manipulate the wave in an advantageous way, and are known either as metamaterials or photonic crystals. Part of their proposed applications are for the terahertz technology, where they may address relatively poor performance of classical approaches.
 
-The theoretical treatment of these phenomena starts from the classical electrodynamics of media with classical dispersion, which is later generalized to spatially dispersive media and to the Bloch-Floquet theory of waves in periodic structures. The end of the theoretical part attempts to clarify the terms used in the literature, and to show that the concepts of metamaterials and photonic crystals are in fact older than is sometimes assumed.
+The theoretical background is derived from the electrodynamics of media with classical dispersion, which is later generalized to spatially dispersive media and to the Bloch-Floquet theory of waves in periodic structures. The end of the theoretical part attempts to clarify the terminology used in the literature, and to show that the concepts of metamaterials and photonic crystals are in fact older than is sometimes assumed.
 
-To complement the rigorous theory with intuitive understanding of the related phenomena, diverse examples of periodic structures are presented, whose behaviour in the terahertz range was numerically simulated by the finite-difference time-domain method. In some cases, the results of this simulation method were supported by other simulation algorithms and by the experimental measurement by the terahertz time-domain spectroscopy.
+The general theory is complemented with examples of the behaviour of diverse periodic structures in the terahertz range, which was numerically simulated by the finite-difference time-domain method. In some cases, the results of this simulation method were supported by other simulation algorithms or by the experimental measurement by the terahertz time-domain spectroscopy. 
 
+The comparison of different structures encompassed in this thesis attempts to present and comment most relevant principles in a didactic way. Arguably, such a comparison was missing in the previous literature.
+Another objective of the presented results is to demonstrate the capabilities of the simulation environment, which the author developed and completely published online to stimulate further research in this field. 
 
-
-
-With the aim 
-
-Electromagnetic 
-The thesis focuses on the behaviour of electromagnetic field in periodic structures. In its first part, it reviews the theory of electromagnetic waves in homogeneous media including those with spatial dispersion. The Bloch theorem enables to rigorously generalize the theory to periodic structures known as metamaterials and photonic crystals. 
-
-
-
-
-~
-\todo{+} 
+% TODO Z abstraktu musí být zřejmé, co je cílem předložené práce a jakých vědeckých výsledků doktorand osobně dosáhl.
 
 %\endgroup
 
@@ -114,7 +113,7 @@ The thesis focuses on the behaviour of electromagnetic field in periodic structu
 \chapter*{Acknowledgements}
 Preparation of this thesis was not without difficulties. However, it appears that overcoming such difficulties is essential to gain some sort of valuable knowledge that can not be conveyed through textbooks, and of experience that can not be gained through straightforward and focused work only.  At the first place I wish to express thanks to my advisor, Dr. Filip Kadlec, and all other people who helped this project to be finished, namely Dr. Christelle Kadlec and doc. Petr Ku\v{z}el  from the Institute of Physics, and doc. Ivan Richter from the Faculty of Nuclear Engineering and Physical sciences, Czech Technical University. 
 
-Discussions with doc. Lukáš Jelínek and prof. Jan Macháč convinced me of the value in proper handling of the theoretical background, which later proved essential for explaining the results of the thesis. During my stay in France in 2013, a collaboration with Dr. Matthias Vanwolleghem not only greatly contributed to my experience with the numerical simulations, but was also very inspiring. 
+Discussions with doc. Lukáš Jelínek and prof. Jan Macháč convinced me of the value in proper handling of the theoretical background, which later proved essential for explaining the results of the thesis. During my stay in France in 2013, the collaboration with Dr. Matthias Vanwolleghem not only greatly contributed to my experience with the numerical simulations, but was also very inspiring. 
 
 Almost surprisingly, all my scientific aspirations found a permanent and selfless support of my wife and all family members, who always had patience with my focusing on abstract problems instead of the more practical aims and with my stubborn attitude towards some of their good advices.
 
