--- a/fdphd.bib
+++ b/fdphd.bib
@@ -574,7 +574,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 }
 /*}}}*/
 
-%  -- homogenisation - older  -- 
+%  -- homogenisation practice - older  -- /*{{{*/
 @article{nicolson1970measurement,
   title={Measurement of the intrinsic properties of materials by time-domain techniques},
   author={Nicolson, AM and Ross, GF},
@@ -611,7 +611,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 
 % ################################################################################
 
-%  -- Homogenisation: Ad_Monsoriu --
+%  -- Homogenisation theory: Ad_Monsoriu --/*{{{*/
 
 %	scanning the a/λ ratio of SRR array, "medium progressively becomes less homogenizable", 
 %	discuss the possibility of effparam  when λ~3a, "Bragg scattering ... becomes the dominant"
@@ -640,7 +640,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
 
 
 %  -- Homogenisation: 120626_Homogenisation_approaches --
-
 
 @article{chen2004robust,
   title={Robust method to retrieve the constitutive effective parameters of metamaterials},
@@ -770,8 +769,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 % ZamudioLara 2006 Characterisation of metal diel PhCs
 
 % % == Photonic crystals ==
-% /*{{{*/
-
+%  -- generic PhC theory -- /*{{{*/ 
 @article{yablonovitch1987,
   title = {Inhibited Spontaneous Emission in Solid-State Physics and Electronics},
   author = {Yablonovitch, Eli},
@@ -861,7 +859,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
   publisher={Optical Society of America}
 }
 % /*}}}*/
-
 %  -- PhC containing resonators (ad Monsoriu) --/*{{{*/
 @article{laktionov2008,
   title={Mechanism of formation of band gaps in one-dimensional photonic quasi-crystals},
