--- a/theory.tex
+++ b/theory.tex
@@ -1324,7 +1324,7 @@ or tunes the individual resonance frequency keeping the lattice unchanged (e.g. 
 In the more abstract studies, the structure of the unit cell with its full electrodynamic behaviour is substituted by a flat homogeneous layer characterized only by its effective parameters which may be negative at certain frequencies. % This is equivalent to examining a one-dimensional structure of alternating layers of positive and negative effective parameters.
 This approach is only an approximation, since usually the unit cell behaviour involves its coupling with nonradiative fields, which can no more be taken into account when they are replaced by a layer. The advantage is however in the possibility to use analytic means for understanding of the factors forming the band diagram.
 
-Such an unusual photonic crystal can exhibit a specific \textit{zero order photonic band gap} \cite{chan2003, panoiu2006, chen2005} when the phase advance through the layer stack is zero, as has been confirmed also on experimental basis \cite{kocaman}. In contrast, the typical photonic band gaps in positive-index dielectric layers occur when the phase advance is $\pi M, M\in \mathbb{N}$.  %% TODO or 2\pi as was before?
+Such an unusual photonic crystal can exhibit a specific \textit{zero order photonic band gap} \cite{chan2003, chen2005} when the phase advance through the layer stack is zero, as has been confirmed also on experimental basis \cite{kocaman2011zero}. In contrast, the typical photonic band gaps in positive-index dielectric layers occur when the phase advance is $\pi M, M\in \mathbb{N}$.  %% TODO or 2\pi as was before?
 The characteristic property of the \textit{zero-order} band gap lies in zero sensitivity to the structure scaling; it can manifest itself even when the spacing of the hypothetical PhC is deeply subwavelength.
 
 Another type of a band gap with different field pattern were predicted \cite{wang2004} when layers with $\epsrl>0, \murl<0$ and $\epsrl<0, \murl>0$ were stacked. %It is assumed that the energy transfer is mediated through near-field coupling of surface plasmons.
